--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
 
 
     </head>
@@ -8,7 +9,7 @@
 
     <body>
         <h1> Odin Recipes</h1>
-        <a href="recipes/stuffed_egg.html" target="_blank">stuffed_egg</a>
+        <a href="recipes/stuffed_egg.html" target="_blank" rel="noopener noreferrer">stuffed_egg</a>
         
 
 
