--- a/recipes/stuffed_egg.html
+++ b/recipes/stuffed_egg.html
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <head>
-
-
-
-    </head>
-
-    <body>
-        <h1>stuffed_egg</h1>
-        <img scr= "egg.jpeg" alt="stuffed_egg" height="310" width="310">
-
-
-
-    </body>
-
-
-
-
-
+<head>
+    <meta charset="utf-8">
+    <title>Stuffed Egg</title>
+</head>
+<body>
+    <h1>Stuffed Egg</h1>
+    <img src="../images/egg.jpeg" alt="stuffed_egg" height="310" width="310">
+</body>
 </html>
